Start aspects of security models in DBMS

--- a/part/basis/models.tex
+++ b/part/basis/models.tex
@@ -204,12 +204,83 @@
 правил контроля доступа (соответствующие мандатным моделям).
 
 В ролевой модели классическое понятие \textit{субъект} заменяется понятиями \textit{пользователь} и 
-\textit{роль}. Пользователь -- это человек, работающий c системой и выполняющий определённые обязанности. 
-Роль -- это активно действующая в системе абстрактная сущность, c которой связан ограниченный, логический 
-связный набор полномочий, необходимый для осуществления определённой деятельности.
+\textit{роль}. Пользователь -- это человек, работающий c системой и выполняющий определённые 
+обязанности. Роль -- это активно действующая в системе абстрактная сущность, c которой связан 
+ограниченный, логический связный набор полномочий, необходимый для осуществления определённой деятельности.
+
+Такой подход в политике безопасности позволяет учесть разделение обязанностей и полномочий между 
+участниками прикладного информационного процесса, так как с точки зрения ролевой политики имеет 
+значение не личность пользователя, осуществляющего доступ к информации, а то какие полномочия ему 
+необходимы для выполнения его служебных обязанностей \autocite{Zegzhda}. 
+
+В качестве критерия безопасности ролевой модели используется следующее правило \autocite{Zegzhda}: \textit{система считается 
+безопасной, если любой пользователь системы, работающий в определённом сеансе S, может осуществлять 
+действия, требующие полномочия P только в том случае, если P принадлежит разрешениям S.}
 
 \subsubsection{Аспекты исследования моделей безопасности}
+
+При исследовании моделей безопасности (разграничения доступа) вводят набор представлений, 
+который описывали выше: 
+\begin{enumerate}
+    \item Сущности системы -- субъекты и объекты;
+
+    \item Множество отношений определённых типов между субъектами и объектами;
+
+    \item Монитор взаимодействий -- как компонент разрешения/запрещения операций из установленного 
+    множества в соответствии с политикой безопасности;
+
+    \item Политика безопасности;
+
+    \item Текущее состояние системы -- совокупность множеств субъектов, объектов и отношений между ними;
+
+    \item Доказательство утверждения (теоремы) невозможности перейти в небезопасное состояние при 
+    соблюдении всех установленных правил и ограничений.
+\end{enumerate}
+
+В соответствии с набором представлений аспектами любой модели безопасности должны становиться: 
+\begin{enumerate}
+    \item Определение сущностей системы -- для различных моделей сущности могут различаться, например, 
+    как в ролевой модели происходит отказ от привычного понимания понятия субъекта;
+
+    \item Описание множества возможных связей между сущностями системы;
+
+    \item Установление формы представления политики безопасности;
+
+    \item Доказательство теоремы для созданной модели;
+
+    \item Опционально: описание состояния системы, реализации монитора взаимодействий.
+\end{enumerate}
+
 \subsubsection{Особенности применения моделей безопасности в СУБД}
+
+Почти все крупные производители СУБД ограничиваются развитием концепции конфиденциальности, целостности 
+и доступности данных, а их действия направлены, в основном, на преодоление существующих и уже известных 
+уязвимостей, реализацию основных моделей доступа и рассмотрение вопросов, специфичных для конкретной СУБД. 
+Такой подход обеспечивает решение конкретных задач, но не способствует появлению общей концепции 
+безопасности для такого класса ПО, как СУБД. Это значительно усложняет задачу по обеспечению безопасности 
+хранилищ данных на предприятии.
+
+Обычно пользователей СУБД (субъектов) можно разделить на три группы, что влияет на применение определённых 
+моделей безопасности (разграничения доступа):
+\begin{itemize}
+    \item Прикладные программисты -- отвечают за создание программ, использующих базу данных. Программист 
+    может быть как пользователем, имеющим права создания и управления объектами (данными), так и пользователем, 
+    имеющим права только управления данными
+
+    \item Конечные пользователи базы данных -- работают с БД непосредственно через терминал или рабочую станцию. 
+    Как правило, конечные пользователи имеют строго ограниченный набор прав управления данными. Этот набор 
+    может определяться при конфигурировании интерфейса конечного пользователя и не изменяться. Политику 
+    безопасности в данном случае определяет администратор безопасности или администратор БД (если это одно и 
+    то же должностное лицо)
+
+    \item Администраторы баз данных -- образуют особую категорию пользователей СУБД. Они создают сами БД, 
+    осуществляют технический контроль функционирования СУБД, обеспечивают необходимое быстродействие системы. 
+    В обязанности администратора, также входит обеспечение пользователям доступа к необходимым им данным, 
+    написание (или оказание помощи в определении) необходимых пользователю внешних представлений данных. 
+    Администратор определяет политику безопасности
+\end{itemize}
+
+% TODO
 
 \subsubsection{Дискреционные модели}
 \paragraph{HRU}
