Add features of using Security Models in a DBMS

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -238,7 +238,7 @@
 }
 
 @book{Zegzhda,
-author    = {Зегжда Д.П., Ивашко А.M.}, 
+	author    = {Зегжда Д.П., Ивашко А.M.}, 
 	title     = {{Основы безопасности информационных систем}},
 	publisher = {Горячая линия - Телеком},
 	year      = 2000,
@@ -253,3 +253,17 @@ author    = {Зегжда Д.П., Ивашко А.M.},
     urldate = {2021-04-07},
 }
 
+@online{CitForumSafeDB,
+    author = {{Лилия Козленко}},
+    title = {{Информационная безопасность в современных системах управления базами данных}},
+    url = {http://citforum.ru/security/articles/safe_db/},
+    urldate = {2021-04-09},
+}
+
+@book{Skakun,
+	author    = {Скакун В.В.}, 
+	title     = {{Защита информации в базах данных и экспертных системах}},
+	publisher = {БГУ},
+	year      = 2017,
+	url = {https://elib.bsu.by/bitstream/123456789/48524/5/%D0%97%D0%B0%D1%89%D0%B8%D1%82%D0%B0%20%D0%B8%D0%BD%D1%84%D0%BE%D1%80%D0%BC%D0%B0%D1%86%D0%B8%D0%B8%20%D0%B2%20%D0%91%D0%94.pdf}
+}
