--- a/part/basis/models.tex
+++ b/part/basis/models.tex
@@ -146,23 +146,9 @@
 доминирования}, например, уровень безопасности \textit{сов. секретно} считается более высоким чем
 уровень \textit{секретно}.
 
-В многоуровневой модели задается порядок следования уровней доступа и уровней безопасности (секретности), 
+В каждой мандатной модели задается порядок следования уровней доступа и уровней безопасности (секретности), 
 а затем устанавливаются \textbf{связи между уровнем доступа и уровнем секретности}. Эти связи, 
 устанавливающие разрешение на доступ, называются \textbf{мандатными связями}.
-
-Контроль доступа осуществляется в зависимости от уровней безопасности взаимодействующих сторон на 
-основании двух правил \autocite{URFULecture10Models}:
-\begin{enumerate}
-    \item \textbf{No read up (NRU)} – нет чтения вверх: субъект имеет право читать только те документы, 
-    уровень безопасности которых не превышает его собственный уровень безопасности
-
-    \item \textbf{No write down (NWD)} – нет записи вниз: субъект имеет право заносить информацию только 
-    в те документы, уровень безопасности которых не ниже его собственного уровня безопасности
-\end{enumerate}
-\textbf{\textit{Первое правило обеспечивает защиту информации, обрабатываемой более доверенными 
-(высокоуровневыми) лицами, от доступа со стороны менее доверенных (низкоуровневых). Второе правило 
-предотвращает утечку информации (сознательную или несознательную) от высокоуровневых участников 
-процесса обработки информации к низкоуровневым.}}
 
 Таким образом, при создании системы безопасности с использованием мандатной модели необходимо:
 \begin{itemize}
@@ -213,9 +199,10 @@
 значение не личность пользователя, осуществляющего доступ к информации, а то какие полномочия ему 
 необходимы для выполнения его служебных обязанностей \autocite{Zegzhda}. 
 
-В качестве критерия безопасности ролевой модели используется следующее правило \autocite{Zegzhda}: \textit{система считается 
-безопасной, если любой пользователь системы, работающий в определённом сеансе S, может осуществлять 
-действия, требующие полномочия P только в том случае, если P принадлежит разрешениям S.}
+В качестве критерия безопасности ролевой модели используется следующее правило \autocite{Zegzhda}: 
+\textit{система считается безопасной, если любой пользователь системы, работающий в определённом 
+сеансе S, может осуществлять действия, требующие полномочия P только в том случае, если P принадлежит 
+разрешениям S.}
 
 \subsubsection{Аспекты исследования моделей безопасности}
 
@@ -261,7 +248,7 @@
 хранилищ данных на предприятии.
 
 Обычно пользователей СУБД (субъектов) можно разделить на три группы, что влияет на применение определённых 
-моделей безопасности (разграничения доступа):
+моделей безопасности (разграничения доступа) \autocite{CitForumSafeDB}:
 \begin{itemize}
     \item Прикладные программисты -- отвечают за создание программ, использующих базу данных. Программист 
     может быть как пользователем, имеющим права создания и управления объектами (данными), так и пользователем, 
@@ -280,16 +267,178 @@
     Администратор определяет политику безопасности
 \end{itemize}
 
-% TODO
+Отметим, что в настоящее время для контроля доступа в СУБД как правило используются дискреционные и ролевые 
+модели. Мандатные модели значительно менее популярны в силу ряда недостатков в их использовании в СУБД.
+
+\paragraph{Дискреционные и ролевые модели доступа в СУБД}
+
+При использовании дискреционных моделей в СУБД:
+\begin{itemize}
+    \item Субъект -- системный идентификатор, от имени которого СУБД выполняет определенные действия над 
+    определенными объектами. Понятие субъекта отличается от понятия пользователь компьютерной системы, 
+    поскольку инициировать изменение информации могут также и системные процессы
+    \item Объект защиты -- часть БД, на которую распространяется действие конкретного правила безопасности; 
+    это может быть группа отношений, отдельное отношение, подмножества атрибутов и т.д.
+    \item Привилегия -- действие над объектом защиты, которое может быть совершено от имени конкретного 
+    идентификатора (по сути элемент из множества отношений между субъектами и объектами -- право на доступ)
+\end{itemize}
+
+Чаще всего владельцем базы данных является Администратор БД. Ему предоставлены все системные и объектные 
+привилегии. В частности, он имеет право регистрации новых пользователей и предоставления им привилегий, как 
+системных, так и объектных. Пользователь, имеющий системные привилегии, является владельцем всех созданных им
+объектов, имеет по отношению к ним все привилегии и может предоставлять их полностью или частично другим 
+пользователям. Минимальной системной привилегией является право подключения к СУБД - привилегия входа 
+\autocite{Skakun}. 
+
+Пользователи могут быть объединены в специальные группы пользователей. Один пользователь может входить в 
+несколько групп. Для пользователей с минимальным стандартным набором прав вводится понятие группы PUBLIC. 
+По умолчанию предполагается, что каждый вновь создаваемый пользователь, если специально не указано иное, 
+относится к группе PUBLIC (как минимум в PostgreSQL).
+
+Привилегии конкретному пользователю могут быть назначены администратором явно и неявно, например, через роль. 
+Роль - это еще один возможный именованный носитель привилегий. Существует ряд стандартных ролей, которые 
+проектируются при разработке СУБД. Также имеется возможность создавать новые роли, группируя в них произвольные 
+полномочия. Введение ролей позволяет упростить управление привилегиями пользователей, структурировать этот 
+процесс. Кроме того, введение ролей не связано с конкретными пользователями, поэтому роли могут быть определены 
+и сконфигурированы до того, как определены пользователи системы.
+
+\textbf{Операторы SQL предоставления и отмены привилегий.} В стандарте SQL определены два оператора GRANT и 
+REVOKE для предоставления и отмены привилегий соответственно. \textit{\textbf{Оператор предоставления привилегий}} 
+имеет следующий формат \autocite{Skakun}:
+\begin{lstlisting}[]
+GRANT {<action list>|ALL PRIVILEGES} ON <object name>
+    TO {<user list>|PUBLIC} [WITH GRANT OPTION];
+\end{lstlisting}
+, где:
+\begin{itemize}
+    \item <action list>(<список действий>) определяет набор действий из доступного списка действий над объектом 
+    данного типа (параметр ALL PRIVILEGES указывает, что разрешены все действия, допустимые для объектов данного
+    типа),
+    \item <object name>(<имя объекта>) определяет имя объекта защиты: таблицы, представления, хранимой 
+    процедуры или триггера,
+    \item <user list>(<список пользователей>) определяет список идентификаторов пользователей, кому предоставляются 
+    данные привилегии. Вместо списка идентификаторов можно воспользоваться параметром PUBLIC.
+\end{itemize}
+Параметр WITH GRANT OPTION является необязательным и определяет режим, при котором передаются не только права 
+на указанные действия, но и право передавать эти права другим пользователям. Передавать права в этом случае 
+пользователь может только в рамках разрешенных ему действий. В общем случае набор привилегий зависит от 
+реализации СУБД (определяется производителем). Выделяются привилегии манипулирования данными:
+\begin{itemize}
+    \item SELECT –- просматривать данные;
+    \item INSERT [(<список полей>)] -– добавлять данные;
+    \item UPDATE [(<список полей >)] -– обновлять данные;
+    \item DELETE –- удалять данные;
+    \item REFERENCES [(<список полей >)] -- ссылаться на указанные поля при определении ссылочной целостности;
+    \item USAGE –- использовать домены и ограничители целостности;
+    \item EXECUTE –- выполнять сохраненные процедуры и функции.
+\end{itemize}
+Среди привилегии создания/изменения объектов БД выделим наиболее часто используемые:
+\begin{itemize}
+    \item CREATE <тип объекта> -- создание объекта некоторого типа;
+    \item ALTER <тип объекта> -- изменение структуры объекта;
+    \item DROP <тип объекта> -- удаление объекта;
+    \item ALL -- все возможные действия над объектом.
+\end{itemize}
+
+Для отмены ранее назначенных привилегий в стандарте SQL определен оператор REVOKE. \textit{\textbf{Оператор отмены 
+привилегий}} имеет следующий синтаксис \autocite{Skakun}:
+\begin{lstlisting}[]
+REVOKE {<action list>|ALL PRIVILEGES} ON <object name>
+    FROM {<user list>|PUBLIC} {CASCADE|RESTRICT};
+\end{lstlisting}
+Параметры CASCADE или RESTRICT определяют, каким образом должна производиться отмена привилегий. Параметр 
+CASCADE отменяет привилегии не только пользователя, который непосредственно упоминался в операторе GRANT при 
+предоставлении ему привилегий, но и всем пользователям, которым этот пользователь присвоил привилегии,
+воспользовавшись параметром WITH GRANT OPTION.
+
+\textit{Дискреционная модель является очень популярной у разработчиков СУБД. Она реализована в практически всех 
+SQL-совместимых СУБД. Операторы SQL GRANT, REVOKE, DENY, реализующие дискреционную модель разграничения 
+доступа, определены в стандарте языка SQL.}
+
+\textbf{Ролевая модель в СУБД.} Рассмотренная дискреционная модель в СУБД очень похожа на ролевую модель. 
+Основное отличие ролевой модели в СУБД -- это обязательное использование принципа наименьших привилегий 
+и то, что после авторизации пользователя в системе для него создается сессия. При реализации ролевой 
+модели может быть введен ряд ограничений \autocite{Skakun}: например, назначение роли главного администратора 
+(суперпользователя) может быть предоставлено только одному пользователю, вводится запрет совмещения одним 
+пользователем определенных ролей, ограничивается количество пользователей, одновременно выполняющих определенную 
+роль и т.п.
+
+К недостаткам ролевого разграничения доступа в СУБД относится отсутствие формальных доказательств безопасности 
+компьютерной системы, возможность внесения дублирования и избыточности при предоставлении пользователям прав 
+доступа и сложность конструирования ролей \autocite{Skakun}.
+
+Наряду с дискреционной, ролевая модель разграничения доступа, реализована во множестве развитых коммерческих 
+СУБД, например: Microsoft SQL Server, Oracle, IBM DB2 \autocite{Skakun}.
+
+\paragraph{Мандатные модели доступа в СУБД}
+
+Обычно мандатную модель доступа в СУБД реализуют с помощью модели Белл-ЛаПадула, о которой мы поговорим позже 
+при рассмотрении конкретных примеров мандатных моделей.
+
+Перечислим основные недостатки применения мандатных моделей доступа в СУБД \autocite{Skakun}:
+\begin{itemize}
+    \item Невозможность автоматизации назначения уровней секретности и определения границ защищаемых данных, 
+    что в больших системах может приводить к практически бесконечному ручному процессу конфигурации системы
+    \item Снижение эффективности работы компьютерной системы, так как проверка прав доступа субъекта к объекту 
+    выполняется не только при открытии объекта в процессе субъекта, но и перед выполнением любой операции 
+    чтения из объекта или записи в объект
+    \item Создание дополнительных неудобств в работе пользователей компьютерной системы, связанных с 
+    невозможностью изменения информации в неконфиденциальном объекте, если тот же самый процесс использует 
+    информацию из конфиденциального объекта (его уровень конфиденциальности больше нуля). Это зачастую
+    решается путем разрешения пользователю выступать от имени субъекта с меньшим уровнем доступа, что в 
+    свою очередь приводит к деградации системы защиты.
+\end{itemize}
+
+\textit{Из-за отмеченных недостатков мандатного разграничения доступа в реальных СУБД множество объектов, к которым 
+применяется мандатное разграничение, является подмножеством множества объектов, доступ к которым осуществляется 
+на основе дискреционного разграничения.}
+
+Примером реализации мандатного подхода разграничения доступа можно считать компонент Oracle Label Security (OLS), 
+реализованный в СУБД Oracle, начиная с 9 версии. Примером Российской СУБД, реализующей стандарт SQL-92 является 
+СУБД ЛИНТЕР \autocite{Skakun}.
 
 \subsubsection{Дискреционные модели}
+
+Кратко рассмотрим основные (наиболее популярные) модели безопасности.
+
 \paragraph{HRU}
 \paragraph{Take-Grant}
 \paragraph{Action-Entity}
 \paragraph{Wood}
 
 \subsubsection{Мандатные модели}
+
+Основным пунктом каждой мандатной модели безопасности (доступа) является \textbf{определение порядка установления 
+мандатных связей} -- задают связи между уровнями доступа и уровнями безопасности (секретности). Каждая модель 
+должна ссылаться на доказательство соответствующей теоремы о том, что система, находящаяся в безопасном 
+состоянии, не может перейти в небезопасное состояние при соблюдении всех установленных правил и ограничений.
+
+Кратко рассмотрим основные (наиболее популярные) модели безопасности.
+
 \paragraph{Bell-LaPadula}
+
+Мандатный принцип построения системы разграничения доступа в СУБД реализует многоуровневую модель безопасности 
+данных \autocite{Skakun}, называемую еще моделью Белл-ЛаПадула (по имени ее авторов - Д. Белла и Л. ЛаПадула), 
+введенную в 1975 г.
+
+В многоуровневой модели задается порядок следования уровней доступа и уровней безопасности (секретности), 
+а затем устанавливаются связи между уровнем доступа и уровнем секретности - мандатные связи.
+
+Контроль доступа осуществляется в зависимости от уровней безопасности взаимодействующих сторон на 
+основании двух правил \autocite{URFULecture10Models}:
+\begin{enumerate}
+    \item \textbf{No read up (NRU)} – нет чтения вверх: субъект имеет право читать только те документы, 
+    уровень безопасности которых не превышает его собственный уровень безопасности
+
+    \item \textbf{No write down (NWD)} – нет записи вниз: субъект имеет право заносить информацию только 
+    в те документы, уровень безопасности которых не ниже его собственного уровня безопасности
+\end{enumerate}
+
+\textit{Первое правило обеспечивает защиту информации, обрабатываемой более доверенными 
+(высокоуровневыми) лицами, от доступа со стороны менее доверенных (низкоуровневых). Второе правило 
+предотвращает утечку информации (сознательную или несознательную) от высокоуровневых участников 
+процесса обработки информации к низкоуровневым.}
+
 \paragraph{Biba}
 \paragraph{Dion}
 \paragraph{Sea View}
