Update Model Criteria

--- a/part/basis/criteria.tex
+++ b/part/basis/criteria.tex
@@ -1,11 +1,21 @@
 \subsection{Критерии защищенности БД}
 
 \subsubsection{Критерии оценки надежных компьютерных систем (TCSEC)}
-<<Критерии безопасности компьютерных систем>> (Trusted Computer System Evaluation Criteria), получившие неформальное название <<Оранжевая книга>>, были разработаны Министерством обороны США в 1983 году с целью определения требований безопасности, предъявляемых к аппаратному, программному и специальному обеспечению компьютерных систем и выработки соответствующей методологии и технологии анализа степени поддержки политики безопасности в компьютерных системах военного назначения. В данном документе были впервые нормативно определены такие понятия, как <<политика безопасности>>, <<ядро безопасности>> (ТСВ) и т.д.
+<<Критерии безопасности компьютерных систем>> (Trusted Computer System Evaluation Criteria), 
+получившие неформальное название <<Оранжевая книга>>, были разработаны Министерством обороны 
+США в 1983 году с целью определения требований безопасности, предъявляемых к аппаратному, 
+программному и специальному обеспечению компьютерных систем и выработки соответствующей 
+методологии и технологии анализа степени поддержки политики безопасности в компьютерных 
+системах военного назначения. В данном документе были впервые нормативно определены такие 
+понятия, как <<политика безопасности>>, <<ядро безопасности>> (ТСВ) и т.д.
 
-Предложенные в этом документе концепции защиты и набор функциональных требований послужили основой для формирования всех появившихся впоследствии стандартов безопасности.
+Предложенные в этом документе концепции защиты и набор функциональных требований послужили 
+основой для формирования всех появившихся впоследствии стандартов безопасности.
 
-В <<Оранжевой книге>> предложены три категории требований безопасности -- политика безопасности, аудит и корректность, в рамках которых сформулированы шесть базовых требований безопасности. Первые четыре требования направлены непосредственно на обеспечение безопасности информации, а два последних -- на качество самих средств защиты.
+В <<Оранжевой книге>> предложены три категории требований безопасности -- политика безопасности, 
+аудит и корректность, в рамках которых сформулированы шесть базовых требований безопасности. 
+Первые четыре требования направлены непосредственно на обеспечение безопасности информации, 
+а два последних -- на качество самих средств защиты.
 
 Рассмотрим эти требования подробнее:
 
@@ -29,7 +39,12 @@
 \end{enumerate}
 
 \subsubsection{Понятие политики безопасности}
-Политика безопаности -- это набор законов, правил, процедур и норм поведения, определяющих, как организация обрабатывает, защищает и распространяет информацию. Причём, политика безопасности относится к активным методам защиты, поскольку учитывает анализ возможных угроз и выбор адекватных мер противодействия.
+Согласно \cite{GOST50922}: политика безопасности -- совокупность документированных 
+правил, процедур, практических приемов или руководящих принципов в области безопасности 
+информации, которыми руководствуется организация в своей деятельности (то есть как организация 
+обрабатывает, защищает и распространяет информацию). Причём, политика безопасности относится 
+к активным методам защиты, поскольку учитывает анализ возможных угроз и выбор адекватных мер 
+противодействия.
 
 \subsubsection{Совместное применение различных политик безопасности в рамках единой модели}
 Проблема совмещения различных политик безопасности возникает достаточно часто при администрировании компьютерных систем. Стандарты защиты информации в автоматизированных системах подразумевают наличие более одной политики разграничения доступа. 
