--- a/part/basis/models.tex
+++ b/part/basis/models.tex
@@ -402,7 +402,45 @@ SQL-совместимых СУБД. Операторы SQL GRANT, REVOKE, DENY,
 Кратко рассмотрим основные (наиболее популярные) модели безопасности.
 
 \paragraph{HRU}
+
+Модель безопасности Харрисона-Руззо-Ульмана (HRU-модель) реализует произвольное управление доступом субъектов к 
+объектам и контроль за распространением прав доступа \autocite{Zegzhda}. Названа в честь трёх его авторов: Майкла 
+Харрисона, Уолтера Руззо и Джеффри Ульмана.
+
+Главной особенностью является матрица доступа с полным описанием пользовательских прав к файлам. Изменения в эту 
+матрицу вводятся с помощью специальных команд.
+
+\textbf{Представления модели.} Введем некоторые обозначения:
+\begin{itemize}
+    \item S —- множество субъектов;
+    \item O —- множество объектов;
+    \item R = (r\textunderscore{1}, r\textunderscore{2}, ... , r\textunderscore{n}) -— множество прав доступа.
+\end{itemize}
+Для реализации этих прав в данной модели используется матрица доступов M, строки которой соответствуют субъектам, 
+а столбцы — объектам. На пересечении строчек и столбцов указаны права доступа R, которыми обладает данный субъект 
+по отношению к данному объекту. Тогда текущее состояние системы Q можно однозначно записать в таком виде: 
+Q = (S, O, M). Также вводят множество возможных операций A = (a\textunderscore{1}, a\textunderscore{2}, ... , a\textunderscore{k}).
+
+\textbf{Критерий безопасности системы.} Для заданной системы исходное состояние Q\textunderscore{0} = (S\textunderscore{0}, 
+O\textunderscore{0}, M\textunderscore{0}) называется безопасным относительно права r, если не существует такой 
+последовательности команд, которая изменила бы заданное начальное состояние системы так, что право r записалось бы в 
+ячейку M[s;o], в которой оно отсутствовало в начальном состоянии Q\textunderscore{0} \autocite{Zegzhda}. Если это условие не выполнено, 
+то произошла утечка информации.
+
+\textbf{Определение.} Монооперационная команда -- команда, состоящая из не более чем одной элементарной операции \autocite{Zegzhda}.
+
+\textbf{Определение.} Монооперационная система -- система, все команды которой являются монооперационными.
+
+\textbf{Теорема.} Существует алгоритм, проверяющий на безопасность исходное состояние Q\textunderscore{0} 
+монооперационной системы на безопасность относительно права r \autocite{WikiHRU}.
+
+\textbf{Теорема.} Задача определения безопасности исходного состояния Q\textunderscore{0} системы общего вида для 
+данного права r является неразрешимой \autocite{WikiHRU}.
+
+Основным преимуществом модели над другими дискреционными является строгость критерия безопасности \autocite{WikiHRU}.
+
 \paragraph{Take-Grant}
+
 \paragraph{Action-Entity}
 \paragraph{Wood}
 
