--- a/bibliography.bib
+++ b/bibliography.bib
@@ -267,3 +267,10 @@
 	year      = 2017,
 	url = {https://elib.bsu.by/bitstream/123456789/48524/5/%D0%97%D0%B0%D1%89%D0%B8%D1%82%D0%B0%20%D0%B8%D0%BD%D1%84%D0%BE%D1%80%D0%BC%D0%B0%D1%86%D0%B8%D0%B8%20%D0%B2%20%D0%91%D0%94.pdf}
 }
+
+@online{WikiHRU,
+    title = {{Модель Харрисона-Руззо-Ульмана — Википедия}},
+    url = {https://ru.wikipedia.org/wiki/%D0%9C%D0%BE%D0%B4%D0%B5%D0%BB%D1%8C_%D0%A5%D0%B0%D1%80%D1%80%D0%B8%D1%81%D0%BE%D0%BD%D0%B0-%D0%A0%D1%83%D0%B7%D0%B7%D0%BE-%D0%A3%D0%BB%D1%8C%D0%BC%D0%B0%D0%BD%D0%B0},
+    urldate = {2021-04-09},
+    year={2021}
+}
